[tool.poetry]
name = "quant-lab"
version = "1.0.0"
description = ""
authors = ["Imani Taylor <imanir.taylor@gmail.com>"]


[[tool.poetry.packages]]
include = "quant-lab"


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.3"
pandas = "^2.0.2"
pyproj = "^3.5.0"
requests = "^2.31.0"
jupytext = "^1.16.1"
contextily = "^1.6.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
moto = "^4.1.12"

[tool.poetry.group.linting.dependencies]
ruff = "^0.0.272"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
    "_build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Default to a complexity level of 10.
max-complexity = 10
